# dashboard

./: bun.nix  flake.nix  package.json  result  vite.config.ts
src/: App.css  App.tsx  bindings.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  google.rs  habits.rs  lib.rs  store.rs  weather.rs
src/components/: Calendar.tsx  Habits.tsx  Photo.tsx  Settings.tsx  Tasks.tsx  Weather.tsx
src/components/settings/: Config.tsx  Filters.tsx  Refresh.tsx
src/context/: SettingsContext.tsx
