[package]
name = "dashboard"
version = "1.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["form", "json", "multipart", "query"] }
dotenvy = "0.15.7"
rand = "0.10.1"
image = "0.25.10"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["alloc", "clock"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
urlencoding = "2.1.3"
tokio = "1.52.3"
directories = "6.0.0"
toml = "1.1.2"
tauri-plugin-fs = "2.5.1"

